--- a/js-drum-kit/index.html
+++ b/js-drum-kit/index.html
@@ -57,8 +57,7 @@
   <audio data-key="k" src="./sounds/tom.wav"></audio>
   <audio data-key="l" src="./sounds/tink.wav"></audio>
   
-  <script src="./main.js">
-  </script>
+  <script src="./main.js" type="text/javascript"></script>
   
 </body>
 </html>
